<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pronunciation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pronunciation"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewRecyclerView1" />

    <TextView
        android:id="@+id/definitionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/definitionTextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/definitionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/definitionType"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewRecyclerView0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/NewRecyclerView0"
        android:layout_width="409dp"
        android:layout_height="224dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definitionTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/NewRecyclerView1"
        android:layout_width="403dp"
        android:layout_height="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definitionType" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/NewRecyclerView2"
        android:layout_width="406dp"
        android:layout_height="184dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pronunciation2" />

</androidx.constraintlayout.widget.ConstraintLayout>