<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view_layout"
        android:layout_width="374dp"
        android:layout_height="697dp"
        android:layout_margin="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="63dp">


        <View
            android:id="@+id/toolbar"
            android:layout_width="364dp"
            android:layout_height="122dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/yellow"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- I reference the below code from below website
        https://www.youtube.com/watch?v=HdoJLQUj1ZY&t=696s
         -->
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="288dp"
            android:layout_height="229dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"

            android:layout_marginEnd="8dp"
            android:background="@drawable/space_for_toolbar"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="169dp"
                android:layout_height="102dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="134dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/round_back" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="353dp"
                android:layout_height="152dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="-120dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:padding="25dp"
                android:src="@drawable/slightly_smiling_face" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textForRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/textForRating"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/viewForInformationWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/viewForInformationWord"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textForRating" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:theme="@style/ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewForInformationWord" />

        <Button
            android:id="@+id/summitButtonForRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="36dp"
            android:text="@string/summitButtonForRate"
            app:icon="@android:drawable/star_big_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newsRecyclerView30"
            android:layout_width="370dp"
            android:layout_height="153dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summitButtonForRate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>